Added view manager to clean up old view

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <!-- SCRIPTS -->
 
     <!-- helpers -->
-    <script type="text/javascript" src="app/helpers/loadTemplate.js"></script>
+    <script type="text/javascript" src="app/helpers/load_template.js"></script>
+    <script type="text/javascript" src="app/helpers/view_manager.js"></script>
 
     <!-- routes -->
     <script type="text/javascript" src="app/routers/note.js"></script>
@@ -33,6 +34,9 @@
 <body>
 
   <div class="container">
+
+    <a href="#/notes">List</a>
+    <a href="#/note/new">New</a>
 
     <div id="notes"></div>
 
